# lotspy

./: .env.example  .gitignore  main.py  package-lock.json  package.json
database/: Dockerfile  README.md  pyproject.toml  scrapy.cfg
database/datasette/: metadata.json
database/lotspy/: exporters.py  items.py  middlewares.py  pipelines.py  settings.py
database/lotspy/spiders/: noorp.py  parcels.py
src/: main.tsx  vite-env.d.ts
src/app/: App.tsx
src/map/: Map.tsx  datasette.test.ts  datasette.ts
