[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.12.0"
pandas = "^2.2.3"
geopandas = "^1.0.1"
datasette = "^0.65.1"
datasette-cors = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
